--- a/Solution1/Orderflow.Identity/appsettings.json
+++ b/Solution1/Orderflow.Identity/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=identitydb;Usurname=postgres;Password=mysecretpassword;"
+  },
   "AllowedHosts": "*"
 }
