--- a/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
+++ b/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+	  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
 	  <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.5.2" />
 	  <PackageReference Include="EntityFramework" Version="6.5.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
