--- a/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
+++ b/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
@@ -26,6 +26,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
 	  <PackageReference Include="Microsoft.IdentityModel.Tokens" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" />
