apigateway and servicedefaults

--- a/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
+++ b/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
@@ -33,4 +33,7 @@
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Orderflow.ServiceDefaults\Orderflow.ServiceDefaults.csproj" />
+	</ItemGroup>
 </Project>
