--- a/Solution1/Directory.Packages.props
+++ b/Solution1/Directory.Packages.props
@@ -18,6 +18,23 @@
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+	<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+
+	  
+	  <PackageVersion Include="Yarp.ReverseProxy" Version="2.2.0" />
+	<PackageVersion Include="RedisRateLimiting" Version="1.2.0" />
+	<PackageVersion Include="RedisRateLimiting.AspNetCore" Version="1.2.0" />
+	<PackageVersion Include="StackExchange.Redis" Version="2.9.32" />
+	<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
+	<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="9.0.0" />
+
+	<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.13.0" />
+	<PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.13.0" />
+	<PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.13.0" />
+	<PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1" />
+	<PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.1" />
+	<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.0.0" />
+	<PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
 
   </ItemGroup>
 </Project>
