Integración de Redis, validaciones y autenticación JWT
Se añadieron dependencias para Redis (`Aspire.StackExchange.Redis`) y validaciones (`FluentValidation`).
Se configuró autenticación y autorización JWT con validación de tokens.
Se implementó una política de limitación de tasa con Redis (100 solicitudes/min).
Se añadieron middlewares para CORS, autenticación, autorización y rate limiting.
Se actualizaron controladores con validaciones robustas para usuarios y roles.
Se ajustaron configuraciones en `appsettings.json` y `ReverseProxy`.
Se añadieron validaciones globales en `Orderflow.Identity` y referencias necesarias.

--- a/Solution1/Orderflow.ApiGateway/Orderflow.ApiGateway.csproj
+++ b/Solution1/Orderflow.ApiGateway/Orderflow.ApiGateway.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.StackExchange.Redis" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 
@@ -17,7 +18,8 @@
 	<PackageReference Include="RedisRateLimiting" />
 	<PackageReference Include="RedisRateLimiting.AspNetCore" />
 	<PackageReference Include="StackExchange.Redis" />
-	  
+
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />  
   </ItemGroup>
 
   <ItemGroup>
