--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -11,8 +11,9 @@
     "Routes": {
       "identity-api-route": {
         "ClusterId": "identity-api",
+        "RateLimiterPolicy": "open", // Apply the "open" rate limiting policy
         "Match": {
-          "Path": "/api/v{version}/auth/{**catch-all}"
+          "Path": "/api/auth/{**catch-all}"     //v{version}/
         }
       }
     },
@@ -21,7 +22,7 @@
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
-            "Address": "https+http://orderflow-api-identity"
+            "Address": "https+http://orderflow-identity"
           }
         }
       }
