--- a/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
+++ b/Solution1/Orderflow.Identity/Orderflow.Identity.csproj
@@ -20,6 +20,8 @@
 	  <PackageReference Include="Asp.Versioning.Mvc" />
 	  <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
 	  <PackageReference Include="EntityFramework" />
+	  <PackageReference Include="FluentValidation" />
+	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
@@ -29,6 +31,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
 	  <PackageReference Include="Microsoft.IdentityModel.Tokens" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+	  <PackageReference Include="Scalar.AspNetCore" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
