--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -9,23 +9,44 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "identity-api-route": {
+      "identity-api-auth": {
         "ClusterId": "identity-api",
-        "RateLimiterPolicy": "open", // Apply the "open" rate limiting policy
+        "RateLimiterPolicy": "open",
         "Match": {
-          "Path": "/api/auth/{**catch-all}"     //v{version}/
+          "Path": "/api/auth/{**catch-all}"
+        }
+      },
+      "identity-api-roles": {
+        "ClusterId": "identity-api",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/roles/{**catch-all}"
         }
       }
     },
-    "Clusters": {
-      "identity-api": {
-        "LoadBalancingPolicy": "RoundRobin",
-        "Destinations": {
-          "destination1": {
-            "Address": "https+http://orderflow-identity"
-          }
+    "identity-api-users": {
+      "ClusterId": "identity-api",
+      "RateLimiterPolicy": "open",
+      "Match": {
+        "Path": "/api/users/{**catch-all}"
+      }
+    },
+    "identity-api-usersadmin": {
+      "ClusterId": "identity-api",
+      "RateLimiterPolicy": "open",
+      "Match": {
+        "Path": "/api/usersadmin/{**catch-all}"
+      }
+    }
+  },
+  "Clusters": {
+    "identity-api": {
+      "LoadBalancingPolicy": "RoundRobin",
+      "Destinations": {
+        "destination1": {
+          "Address": "https+http://orderflow-identity"
         }
       }
     }
   }
-}
+} 
