install rabbit and apigateway authorization

--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -6,47 +6,56 @@
       "Yarp": "Information"
     }
   },
+  "JWT": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "ExpiryInMinutes": 60
+  },
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
       "identity-api-auth": {
         "ClusterId": "identity-api",
+        "AuthorizationPolicy": "anonymous",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/auth/{**catch-all}"
         }
       },
-      "identity-api-roles": {
+      "identity-api-rol": {
         "ClusterId": "identity-api",
+        "AuthorizationPolicy": "admin",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/roles/{**catch-all}"
         }
+      },
+      "identity-api-users": {
+        "ClusterId": "identity-api",
+        "AuthorizationPolicy": "user",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/users/{**catch-all}"
+        }
+      },
+      "identity-api-usersadmin": {
+        "ClusterId": "identity-api",
+        "AuthorizationPolicy": "admin",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/usersadmin/{**catch-all}"
+        }
       }
     },
-    "identity-api-users": {
-      "ClusterId": "identity-api",
-      "RateLimiterPolicy": "open",
-      "Match": {
-        "Path": "/api/users/{**catch-all}"
-      }
-    },
-    "identity-api-usersadmin": {
-      "ClusterId": "identity-api",
-      "RateLimiterPolicy": "open",
-      "Match": {
-        "Path": "/api/usersadmin/{**catch-all}"
-      }
-    }
-  },
-  "Clusters": {
-    "identity-api": {
-      "LoadBalancingPolicy": "RoundRobin",
-      "Destinations": {
-        "destination1": {
-          "Address": "https+http://orderflow-identity"
+    "Clusters": {
+      "identity-api": {
+        "LoadBalancingPolicy": "RoundRobin",
+        "Destinations": {
+          "destination1": {
+            "Address": "https://orderflow-identity"
+          }
         }
       }
     }
   }
-} 
+}
