update events rabbit for create user

--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -16,7 +16,7 @@
     "Routes": {
       "identity-api-auth": {
         "ClusterId": "identity-api",
-        "AuthorizationPolicy": "anonymous",
+        //"AuthorizationPolicy": "anonymous",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/auth/{**catch-all}"
@@ -24,7 +24,7 @@
       },
       "identity-api-rol": {
         "ClusterId": "identity-api",
-        "AuthorizationPolicy": "admin",
+        //"AuthorizationPolicy": "admin",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/roles/{**catch-all}"
@@ -32,7 +32,7 @@
       },
       "identity-api-users": {
         "ClusterId": "identity-api",
-        "AuthorizationPolicy": "user",
+        //"AuthorizationPolicy": "user",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/users/{**catch-all}"
@@ -40,7 +40,7 @@
       },
       "identity-api-usersadmin": {
         "ClusterId": "identity-api",
-        "AuthorizationPolicy": "admin",
+        //"AuthorizationPolicy": "admin",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/usersadmin/{**catch-all}"
