--- a/Solution1/Directory.Packages.props
+++ b/Solution1/Directory.Packages.props
@@ -40,5 +40,7 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.1" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
+	<PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
+	  
   </ItemGroup>
 </Project>
