--- a/Solution1/Directory.Packages.props
+++ b/Solution1/Directory.Packages.props
@@ -15,6 +15,7 @@
     <PackageVersion Include="EntityFramework" Version="6.5.1" />
     <PackageVersion Include="FluentValidation" Version="12.1.0" />
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
+    <PackageVersion Include="MailKit" Version="4.12.1" />
     <PackageVersion Include="MassTransit.RabbitMQ" Version="8.5.6" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
@@ -40,7 +41,6 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.1" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
-	<PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
-	  
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
   </ItemGroup>
 </Project>
