--- a/Solution1/Orderflow.Notification/appsettings.json
+++ b/Solution1/Orderflow.Notification/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Email": {
+    "FromName": "OrderFlow",
+    "FromAddress": "noreply@orderflow.local",
+    "SmtpHost": "localhost",
+    "SmtpPort": "1025"
   }
 }
