--- a/Solution1/Orderflow/Orderflow.csproj
+++ b/Solution1/Orderflow/Orderflow.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orderflow.ApiGateway\Orderflow.ApiGateway.csproj" />
+    <ProjectReference Include="..\Orderflow.Catalog\Orderflow.Catalog.csproj" />
     <ProjectReference Include="..\Orderflow.Identity\Orderflow.Identity.csproj" />
     <ProjectReference Include="..\Orderflow.Notification\Orderflow.Notification.csproj" />
   </ItemGroup>
