--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -2,21 +2,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Yarp": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.IdentityModel": "Information"
     }
   },
   "JWT": {
-    "Issuer": "localhost",
-    "Audience": "localhost",
-    "ExpiryInMinutes": 60
+    "Issuer": "Orderflow.Identity",
+    "Audience": "Orderflow.Client",
+    "ExpiryInMinutes": "180"
   },
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
       "identity-api-auth": {
         "ClusterId": "identity-api",
-        //"AuthorizationPolicy": "anonymous",
+        "AuthorizationPolicy": "anonymous",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/auth/{**catch-all}"
@@ -24,7 +25,7 @@
       },
       "identity-api-rol": {
         "ClusterId": "identity-api",
-        //"AuthorizationPolicy": "admin",
+        "AuthorizationPolicy": "admin",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/roles/{**catch-all}"
@@ -32,7 +33,7 @@
       },
       "identity-api-users": {
         "ClusterId": "identity-api",
-        //"AuthorizationPolicy": "user",
+        "AuthorizationPolicy": "user",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/users/{**catch-all}"
@@ -40,11 +41,40 @@
       },
       "identity-api-usersadmin": {
         "ClusterId": "identity-api",
-        //"AuthorizationPolicy": "admin",
+        "AuthorizationPolicy": "admin",
         "RateLimiterPolicy": "open",
         "Match": {
           "Path": "/api/usersadmin/{**catch-all}"
         }
+      }
+    },
+    "catalog-api-categories": {
+      "ClusterId": "catalog-api",
+      "AuthorizationPolicy": "admin",
+      "RateLimiterPolicy": "open",
+      "Match": {
+        "Path": "/api/v{version}/categories/{**catch-all}"
+      }
+    },
+    "catalog-api-products-users": {
+      "ClusterId": "catalog-api",
+      "AuthorizationPolicy": "user",
+      "RateLimiterPolicy": "open",
+      "Match": [
+        {
+          "Path": "/api/v{version}/products/getall"
+        },
+        {
+          "Path": "/api/v{version}/products/getproduct"
+        }
+      ]
+    },
+    "catalog-api-products-admin": {
+      "ClusterId": "catalog-api",
+      "AuthorizationPolicy": "admin",
+      "RateLimiterPolicy": "open",
+      "Match": {
+        "Path": "/api/v{version}/products/{**catch-all}"
       }
     },
     "Clusters": {
@@ -53,6 +83,14 @@
         "Destinations": {
           "destination1": {
             "Address": "https://orderflow-identity"
+          }
+        }
+      },
+      "catalog-api": {
+        "LoadBalancingPolicy": "RoundRobin",
+        "Destinations": {
+          "destination1": {
+            "Address": "https://orderflow-catalog"
           }
         }
       }
