create Orders and migrations

--- a/Solution1/Orderflow/Orderflow.csproj
+++ b/Solution1/Orderflow/Orderflow.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\Orderflow.Catalog\Orderflow.Catalog.csproj" />
     <ProjectReference Include="..\Orderflow.Identity\Orderflow.Identity.csproj" />
     <ProjectReference Include="..\Orderflow.Notification\Orderflow.Notification.csproj" />
+    <ProjectReference Include="..\Orderflow.Orders\Orderflow.Orders.csproj" />
   </ItemGroup>
 
 </Project>
