--- a/Solution1/Orderflow.Catalog/appsettings.Development.json
+++ b/Solution1/Orderflow.Catalog/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Jwt": {
+    "Issuer": "Orderflow.Identity",
+    "Audience": "Orderflow.Client",
+    "ExpireMinutes": "180"
+  },
+  "AllowedHosts": "*"
 }
