--- a/Solution1/Orderflow.Orders/appsettings.json
+++ b/Solution1/Orderflow.Orders/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "Orderflow.Identity",
+    "Audience": "Orderflow.Client",
+    "ExpireMinutes": "180"
+  },
   "AllowedHosts": "*"
 }
