--- a/Solution1/Orderflow.Orders/Orderflow.Orders.csproj
+++ b/Solution1/Orderflow.Orders/Orderflow.Orders.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Asp.Versioning.Http" />
 		<PackageReference Include="Asp.Versioning.Mvc" />
+		<PackageReference Include="MassTransit.RabbitMQ" />
 		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
