--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -46,37 +46,57 @@
         "Match": {
           "Path": "/api/usersadmin/{**catch-all}"
         }
-      }
-    },
-    "catalog-api-categories": {
-      "ClusterId": "catalog-api",
-      "AuthorizationPolicy": "admin",
-      "RateLimiterPolicy": "open",
-      "Match": {
-        "Path": "/api/v{version}/categories/{**catch-all}"
-      }
-    },
-    "catalog-api-products-users": {
-      "ClusterId": "catalog-api",
-      "AuthorizationPolicy": "user",
-      "RateLimiterPolicy": "open",
-      "Match": [
-        {
+      },
+      "catalog-api-categories": {
+        "ClusterId": "catalog-api",
+        "AuthorizationPolicy": "admin",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/v{version}/categories/{**catch-all}"
+        }
+      },
+      "catalog-api-products-users-getall": {
+        "ClusterId": "catalog-api",
+        "AuthorizationPolicy": "user",
+        "RateLimiterPolicy": "open",
+        "Match": {
           "Path": "/api/v{version}/products/getall"
-        },
-        {
+        }
+      },
+      "catalog-api-products-users-getproduct": {
+        "ClusterId": "catalog-api",
+        "AuthorizationPolicy": "user",
+        "RateLimiterPolicy": "open",
+        "Match": {
           "Path": "/api/v{version}/products/getproduct"
         }
-      ]
-    },
-    "catalog-api-products-admin": {
-      "ClusterId": "catalog-api",
-      "AuthorizationPolicy": "admin",
-      "RateLimiterPolicy": "open",
-      "Match": {
-        "Path": "/api/v{version}/products/{**catch-all}"
+      },
+      "catalog-api-products-admin": {
+        "ClusterId": "catalog-api",
+        "AuthorizationPolicy": "admin",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/v{version}/products/{**catch-all}"
+        }
+      },
+      "orders-user": {
+        "ClusterId": "orders-api",
+        "AuthorizationPolicy": "user",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/v{version}/orders/{**catch-all}"
+        }
+      },
+      "orders-admin": {
+        "ClusterId": "orders-api",
+        "AuthorizationPolicy": "admin",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/v{version}/admin/{**catch-all}"
+        }
       }
     },
+
     "Clusters": {
       "identity-api": {
         "LoadBalancingPolicy": "RoundRobin",
@@ -91,6 +111,14 @@
         "Destinations": {
           "destination1": {
             "Address": "https://orderflow-catalog"
+          }
+        }
+      },
+      "orders-api": {
+        "LoadBalancingPolicy": "RoundRobin",
+        "Destinations": {
+          "destination1": {
+            "Address": "https://orderflow-order"
           }
         }
       }
