--- a/Solution1/Directory.Packages.props
+++ b/Solution1/Directory.Packages.props
@@ -42,5 +42,12 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.13.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.1" />
+
+	<PackageVersion Include="coverlet.collector" Version="6.0.4" />
+	<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
+	<PackageVersion Include="Moq" Version="4.20.72" />
+	<PackageVersion Include="NUnit" Version="4.3.2" />
+	<PackageVersion Include="NUnit.Analyzers" Version="4.7.0" />
+	<PackageVersion Include="NUnit3TestAdapter" Version="5.0.0" />
   </ItemGroup>
 </Project>
