--- a/Solution1/Orderflow.Orders/Orderflow.Orders.csproj
+++ b/Solution1/Orderflow.Orders/Orderflow.Orders.csproj
@@ -28,6 +28,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Orderflow.ServiceDefaults\Orderflow.ServiceDefaults.csproj" />
+	  <ProjectReference Include="..\Orderflow.Shared\Orderflow.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
