--- a/Solution1/Orderflow.Catalog/Orderflow.Catalog.csproj
+++ b/Solution1/Orderflow.Catalog/Orderflow.Catalog.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orderflow.ServiceDefaults\Orderflow.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Orderflow.Shared\Orderflow.Shared.csproj" />
   </ItemGroup>
 
 </Project>
