Refactorización API órdenes, modelo y ServiceResult
- Refactoriza controladores de órdenes para usuarios y admins, mejorando rutas, respuestas y manejo de errores.
- Unifica y centraliza la clase ServiceResult para respuestas estándar.
- Mejora integración con microservicio de catálogo (HttpClient, token, reserva/liberación de stock).
- Actualiza modelo de datos: OrderItem usa int autoincremental, campos nullable en Order, migraciones EF actualizadas.
- Ajusta configuración de endpoints, dependencias y añade MailDev para pruebas.
- Limpieza de código, logs y snapshots de migraciones.

--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -68,7 +68,7 @@
         "AuthorizationPolicy": "user",
         "RateLimiterPolicy": "open",
         "Match": {
-          "Path": "/api/v{version}/products/getproduct"
+          "Path": "/api/v{version}/products/getproduct/{id}"
         }
       },
       "catalog-api-products-admin": {
@@ -118,7 +118,7 @@
         "LoadBalancingPolicy": "RoundRobin",
         "Destinations": {
           "destination1": {
-            "Address": "https://orderflow-order"
+            "Address": "https://orderflow-orders"
           }
         }
       }
