--- a/Solution1/Orderflow.Orders/appsettings.json
+++ b/Solution1/Orderflow.Orders/appsettings.json
@@ -10,5 +10,8 @@
     "Audience": "Orderflow.Client",
     "ExpireMinutes": "180"
   },
+  "Services": {
+    "CatalogUrl": "https://localhost:7223"
+  },
   "AllowedHosts": "*"
 }
