--- a/Solution1/Orderflow.ApiGateway/appsettings.json
+++ b/Solution1/Orderflow.ApiGateway/appsettings.json
@@ -47,6 +47,22 @@
           "Path": "/api/usersadmin/{**catch-all}"
         }
       },
+      "catalog-api-categories-users-getallcategory": {
+        "ClusterId": "catalog-api",
+        "AuthorizationPolicy": "user",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/v{version}/categories/getallcategory"
+        }
+      },
+      "catalog-api-categories-users-getcategory": {
+        "ClusterId": "catalog-api",
+        "AuthorizationPolicy": "user",
+        "RateLimiterPolicy": "open",
+        "Match": {
+          "Path": "/api/v{version}/products/getcategory/{id}"
+        }
+      },
       "catalog-api-categories": {
         "ClusterId": "catalog-api",
         "AuthorizationPolicy": "admin",
